--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ matplotlib = "^3.7.2"
 coloredlogs = "^15.0.1"
 dill = "^0.3.6"
 spacy = "^3.6.0"
+pdfminer-six = "^20221105"
 
 
 [[tool.poetry.source]]
