--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ spacy = "^3.6.0"
 pdfminer-six = "^20221105"
 pandas-gpt = "^0.5.0"
 currency-converter = "^0.5.5"
+astunparse = "^1.6.3"
 
 
 [[tool.poetry.source]]
