significant refactor. rips out the old AST code, replaces it with starlark runtime; tool response works with messages stack, things work a lot better now

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,6 +1,7 @@
 firefox_profile: '/home/user/.mozilla/firefox/cp6sgb0s.selenium'
 firefox_marionette_port: 2828
 firefox_download_dir: '/home/user/llmagents/download'
+firefox_cookies: 'cache/cookies.txt'
 smtp_server: 'localhost'
 smtp_port: 1025
 smtp_username: 'blah@blah.net'
