--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pdfminer-six = "^20221105"
 pandas-gpt = "^0.5.0"
 currency-converter = "^0.5.5"
 astunparse = "^1.6.3"
+pytest-playwright = "^0.4.2"
 
 
 [[tool.poetry.source]]
