adds ability to speak to local LLM instead of openai

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ openai = "^0.27.8"
 rich = "^13.4.2"
 docstring-parser = "^0.15"
 guidance = "^0.0.64"
-langchain = "^0.0.234"
+langchain = "^0.0.275"
 prompt-toolkit = "^3.0.39"
 selenium = "^4.10.0"
 transformers = "^4.30.2"
@@ -32,12 +32,12 @@ markdownify = "^0.11.6"
 matplotlib = "^3.5.2"
 coloredlogs = "^15.0.1"
 dill = "^0.3.6"
-spacy = "^3.6.0"
 pdfminer-six = "^20221105"
 pandas-gpt = "^0.5.0"
 currency-converter = "^0.5.5"
 astunparse = "^1.6.3"
 pytest-playwright = "^0.4.2"
+pydantic-settings = "^2.0.3"
 
 
 [[tool.poetry.source]]
