--- a/config_example.yaml
+++ b/config_example.yaml
@@ -8,4 +8,4 @@ smtp_username: 'blah@blah.net'
 smtp_password: 'password'
 cache_filename: 'cache/cache.db'
 local_openai_api_base: 'http://localhost:8000/v1'
-local_openai_api_version: '../models/vicuna.gguf'
+local_openai_api_version: '../models/llongorca.gguf'
