lots of fixes, updated documentation, type coercion and more

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -9,3 +9,5 @@ smtp_password: 'password'
 cache_filename: 'cache/cache.db'
 local_openai_api_base: 'http://localhost:8000/v1'
 local_openai_api_version: '../models/llongorca.gguf'
+openai_tools_model: 'gpt-4-0613'
+openai_model: 'gpt-3.5-turbo-0613'
