--- a/config_example.yaml
+++ b/config_example.yaml
@@ -7,7 +7,9 @@ smtp_port: 1025
 smtp_username: 'blah@blah.net'
 smtp_password: 'password'
 cache_filename: 'cache/cache.db'
-local_openai_api_base: 'http://localhost:8000/v1'
-local_openai_api_version: '../models/llongorca.gguf'
+openai_api_base: 'https://api.openai.com/v1'
+openai_model: 'gpt-3.5-turbo-16k-0613'
 openai_tools_model: 'gpt-4-0613'
-openai_model: 'gpt-3.5-turbo-0613'
+local_openai_api_base: 'http://localhost:8000/v1'
+local_model: ''
+local_tools_model: ''
