allows piping now, lots of bug fixes, some new features

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,15 +1,16 @@
-firefox_profile: '/home/user/.mozilla/firefox/cp6sgb0s.selenium'
+firefox_profile: '~/.mozilla/firefox/cp6sgb0s.selenium'
 firefox_marionette_port: 2828
-firefox_download_dir: '/home/user/llmvm/download'
-firefox_cookies: 'cache/cookies.txt'
+firefox_download_dir: '~/.local/share/llmvm/download'
+firefox_cookies: '~/.local/share/llmvm/cookies.txt'
 smtp_server: 'localhost'
 smtp_port: 1025
-smtp_username: 'blah@blah.net'
-smtp_password: 'password'
-cache_filename: 'cache/cache.db'
+smtp_username: 'user@domain.com'
+smtp_password: ''
+cache_directory: '~/.local/share/llmvm/cache'
 openai_api_base: 'https://api.openai.com/v1'
 openai_model: 'gpt-3.5-turbo-16k-0613'
 openai_tools_model: 'gpt-4-0613'
 local_openai_api_base: 'http://localhost:8000/v1'
-local_model: ''
-local_tools_model: ''
+local_model: 'llongorca.gguf'
+local_tools_model: 'llongorca.gguf'
+local_model_max_tokens: 16385
