--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,3 +1,5 @@
+# install in ~/.config/llmvm/config.yaml
+# or set LLMVM_CONFIG environment variable to this file
 server_host: '127.0.0.1'
 server_port: 8000
 firefox_profile: '~/.mozilla/firefox/cp6sgb0s.selenium'
@@ -6,22 +8,27 @@ firefox_download_directory: '~/.local/share/llmvm/download'
 firefox_cookies: '~/.local/share/llmvm/cookies.txt'
 smtp_server: 'localhost'
 smtp_port: 1025
-smtp_username: 'blah@blah.net'
+smtp_username: 'hello@hello.com'
 smtp_password: 'password'
 cache_directory: '~/.local/share/llmvm/cache'
 cdn_directory: '~/.local/share/llmvm/cdn'
 log_directory: '~/.local/share/llmvm/logs'
-api_base: 'https://api.openai.com/v1'
-model: 'gpt-3.5-turbo-16k-0613'
-max_tokens: 16384
-tools_model: 'gpt-4-0613'
+vector_store_index_directory: '~/.local/share/llmvm/faiss'
+vector_store_embedding_model: 'BAAI/bge-base-en'
+vector_store_chunk_size: 500
+openai_api_base: 'https://api.openai.com/v1'
+openai_model: 'gpt-3.5-turbo-16k-0613'
+openai_tools_model: 'gpt-4-0613'
+openai_max_tokens: 16384
+anthropic_api_base: 'https://api.anthropic.com'
+anthropic_model: 'claude-v2'
+anthropic_tools_model: 'claude-v2'
+anthropic_max_tokens: 100000 
 local_api_base: 'http://localhost:8000/v1'
 local_model: 'llongorca.gguf'
 local_tools_model: 'llongorca.gguf'
 local_model_max_tokens: 16385
-vector_store_index_directory: '~/.local/share/llmvm/faiss'
-vector_store_embedding_model: 'BAAI/bge-base-en'
-vector_store_chunk_size: 500
+executor: 'openai'  # openai, anthropic, local 
 helper_functions:
   - helpers.webhelpers.WebHelpers.search_linkedin_profile
   - helpers.webhelpers.WebHelpers.get_linkedin_profile
