--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ transformers = "^4.30.2"
 sec-api = "^1.0.16"
 sentence-transformers = "^2.2.2"
 yfinance = "^0.2.24"
-torch = {version = "^2.0.1+cu118", source = "pytorch"}
 icalevents = {git = "https://github.com/9600dev/icalevents.git"}
 pdf2image = "^1.16.3"
 pytesseract = "^0.3.10"
@@ -51,12 +50,9 @@ click-default-group = "^1.2.4"
 fastapi = "^0.103.2"
 uvicorn = "^0.23.2"
 spacy = "^3.7.1"
-
-
-[[tool.poetry.source]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cu118"
-priority = "supplemental"
+nest-asyncio = "^1.5.8"
+faiss-cpu = "^1.7.4"
+torch = "^2.1.0"
 
 
 [[tool.poetry.source]]
