--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,8 @@ readme = "README.md"
 python = "^3.10"
 click = "^8.1.5"
 requests = "^2.31.0"
-openai = "^0.27.8"
 rich = "^13.4.2"
 docstring-parser = "^0.15"
-guidance = "^0.0.64"
-langchain = "^0.0.275"
 prompt-toolkit = "^3.0.39"
 selenium = "^4.10.0"
 transformers = "^4.30.2"
@@ -32,7 +29,6 @@ matplotlib = "^3.5.2"
 coloredlogs = "^15.0.1"
 dill = "^0.3.6"
 pdfminer-six = "^20221105"
-pandas-gpt = "^0.5.0"
 currency-converter = "^0.5.5"
 astunparse = "^1.6.3"
 pytest-playwright = "^0.4.2"
@@ -52,7 +48,10 @@ uvicorn = "^0.23.2"
 spacy = "^3.7.1"
 nest-asyncio = "^1.5.8"
 faiss-cpu = "^1.7.4"
-torch = "^2.1.0"
+torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+tiktoken = "^0.5.1"
+openai = "^1.2.3"
+langchain = "^0.0.334"
 
 
 [[tool.poetry.source]]
