--- a/config_example.yaml
+++ b/config_example.yaml
@@ -18,10 +18,10 @@ vector_store_embedding_model: 'BAAI/bge-base-en'
 vector_store_chunk_size: 500
 openai_api_base: 'https://api.openai.com/v1'
 openai_model: 'gpt-4-1106-preview'
-openai_max_tokens: 16384
+openai_max_tokens: 128000 
 anthropic_api_base: 'https://api.anthropic.com'
-anthropic_model: 'claude-v2'
-anthropic_max_tokens: 100000 
+anthropic_model: 'claude-2.1'
+anthropic_max_tokens: 200000 
 local_api_base: 'http://localhost:8000/v1'
 local_model: 'llongorca.gguf'
 local_model_max_tokens: 16385
