--- a/config_example.yaml
+++ b/config_example.yaml
@@ -17,7 +17,7 @@ vector_store_index_directory: '~/.local/share/llmvm/faiss'
 vector_store_embedding_model: 'BAAI/bge-base-en'
 vector_store_chunk_size: 500
 openai_api_base: 'https://api.openai.com/v1'
-openai_model: 'gpt-4-1106-preview'
+openai_model: 'gpt-4-vision-preview'
 openai_max_tokens: 128000 
 anthropic_api_base: 'https://api.anthropic.com'
 anthropic_model: 'claude-2.1'
