--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,88 +1,56 @@
 [tool.poetry]
 name = "llmvm"
 version = "0.1.0"
-description = ""
+description = "CLI productivity tool for Large Language Models"
 authors = ["Sonny Bonds <contact@9600dev.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-click = "^8.1.5"
+python = "^3.11"
+async-timeout = "^4.0.3"
+click = "^8.1.7"
+httpx = "^0.26.0"
+jsonpickle = "^3.0.2"
+pyperclip = "^1.8.2"
 requests = "^2.31.0"
-rich = "^13.4.2"
+rich = "^13.7.0"
+anthropic = "^0.8.1"
+click-default-group = "^1.2.4"
+pillow = "^10.2.0"
+pandas = "^2.1.4"
+fastapi = "^0.108.0"
 docstring-parser = "^0.15"
-prompt-toolkit = "^3.0.39"
-selenium = "^4.10.0"
-transformers = "^4.30.2"
-sec-api = "^1.0.16"
-sentence-transformers = "^2.2.2"
-yfinance = "^0.2.24"
-icalevents = {git = "https://github.com/9600dev/icalevents.git"}
+scikit-learn = "^1.3.2"
 pdf2image = "^1.16.3"
 pytesseract = "^0.3.10"
-pypdf = "^3.12.1"
-swig = "^4.1.1"
-newspaper3k = "^0.2.8"
-google-search-results = "^2.4.2"
-markdownify = "^0.11.6"
-matplotlib = "^3.5.2"
-coloredlogs = "^15.0.1"
-dill = "^0.3.6"
-pdfminer-six = "^20221105"
-currency-converter = "^0.5.5"
-astunparse = "^1.6.3"
-pytest-playwright = "^0.4.2"
-pydantic-settings = "^2.0.3"
-cloup = "^3.0.2"
-click-repl = "^0.3.0"
-httpx = "^0.25.0"
+pdfminer-six = "^20231228"
+pypdf = "^3.17.4"
+tiktoken = "^0.5.2"
+openai = "^1.6.1"
+uvicorn = "^0.25.0"
 aiofiles = "^23.2.1"
-jsonpickle = "^3.0.2"
-pillow = "^10.0.1"
-python-multipart = "^0.0.6"
-async-timeout = "^4.0.3"
-click-default-group = "^1.2.4"
-fastapi = "^0.103.2"
-uvicorn = "^0.23.2"
-spacy = "^3.7.1"
-nest-asyncio = "^1.5.8"
-faiss-cpu = "^1.7.4"
-torch = ">=2.0.0, !=2.0.1, !=2.1.0"
-tiktoken = "^0.5.1"
-openai = "^1.2.3"
-langchain = "^0.0.334"
-psutil = "^5.9.6"
-pyperclip = "^1.8.2"
-anthropic = "^0.8.1"
+playwright = "^1.40.0"
+selenium = "^4.16.0"
+yfinance = "^0.2.33"
+dill = "^0.3.7"
+astunparse = "^1.6.3"
+sec-api = "^1.0.17"
+nltk = "^3.8.1"
+markdownify = "^0.11.6"
+newspaper3k = "^0.2.8"
 googlesearch-python = "^1.2.3"
-
-
-[[tool.poetry.source]]
-name = "PyPI"
-priority = "primary"
-
+google-search-results = "^2.4.2"
+langchain = "^0.0.353"
+python-multipart = "^0.0.6"
+torch = {version = "^2.1.2", source = "pytorch"}
+sentence-transformers = "^2.2.2"
+faiss-cpu = "^1.7.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.pyright]
-include = ["."]
-exclude = [
-    "**/__pycache__",
-    "backup",
-    "repl.py",
-    "faiss_index",
-    "scripts",
-    "llama-cpp-python",
-    "cache",
-    "faiss",
-    "logs",
-    "prompts",
-]
-reportMissingImports = true
-reportMissingTypeStubs = false
-typeCheckingMode = "basic"
-executionEnvironments = [
-  { root = "." }
-]
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
