--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,15 +42,12 @@ googlesearch-python = "^1.2.3"
 google-search-results = "^2.4.2"
 langchain = "^0.0.353"
 python-multipart = "^0.0.6"
-torch = {version = "^2.1.2", source = "pytorch"}
+torch = "^2.1.2"
 sentence-transformers = "^2.2.2"
 faiss-cpu = "^1.7.4"
+prompt-toolkit = "^3.0.43"
+nest-asyncio = "^1.5.8"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[[tool.poetry.source]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
