--- a/config_example.yaml
+++ b/config_example.yaml
@@ -2,7 +2,9 @@
 # or set LLMVM_CONFIG environment variable to this file
 server_host: '0.0.0.0'
 server_port: 8011
-firefox_profile: ''
+profiling: false 
+profiling_file: '~/.local/share/llmvm/trace.log'
+firefox_profile: '~/.mozilla/firefox/cp6sgb0s.selenium'
 firefox_download_directory: '~/.local/share/llmvm/download'
 firefox_cookies: '~/.local/share/llmvm/cookies.txt'
 firefox_headless: true
@@ -18,10 +20,10 @@ vector_store_embedding_model: 'BAAI/bge-base-en'
 vector_store_chunk_size: 500
 openai_api_base: 'https://api.openai.com/v1'
 openai_model: 'gpt-4-vision-preview'
-openai_max_tokens: 128000 
+openai_max_tokens: 16384
 anthropic_api_base: 'https://api.anthropic.com'
 anthropic_model: 'claude-2.1'
-anthropic_max_tokens: 200000 
+anthropic_max_tokens: 100000 
 local_api_base: 'http://localhost:8000/v1'
 local_model: 'llongorca.gguf'
 local_model_max_tokens: 16385
