--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-
 aiofiles==23.2.1 ; python_version >= "3.11" and python_version < "4.0"
 aiohttp==3.9.1 ; python_version >= "3.11" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -38,41 +36,56 @@ h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.26.0 ; python_version >= "3.11" and python_version < "4.0"
-huggingface-hub==0.20.1 ; python_version >= "3.11" and python_version < "4.0"
+huggingface-hub==0.20.2 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 jieba3k==0.35.1 ; python_version >= "3.11" and python_version < "4.0"
-jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
+jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
 joblib==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.11" and python_version < "4.0"
 jsonpickle==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpointer==2.4 ; python_version >= "3.11" and python_version < "4.0"
-langchain-community==0.0.7 ; python_version >= "3.11" and python_version < "4.0"
-langchain-core==0.1.4 ; python_version >= "3.11" and python_version < "4.0"
+langchain-community==0.0.12 ; python_version >= "3.11" and python_version < "4.0"
+langchain-core==0.1.10 ; python_version >= "3.11" and python_version < "4.0"
 langchain==0.0.353 ; python_version >= "3.11" and python_version < "4.0"
-langsmith==0.0.75 ; python_version >= "3.11" and python_version < "4.0"
-lxml==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
+langsmith==0.0.80 ; python_version >= "3.11" and python_version < "4.0"
+lxml==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdownify==0.11.6 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
-marshmallow==3.20.1 ; python_version >= "3.11" and python_version < "4.0"
+marshmallow==3.20.2 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 multidict==6.0.4 ; python_version >= "3.11" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.11" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
+nest-asyncio==1.5.8 ; python_version >= "3.11" and python_version < "4.0"
 networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
 newspaper3k==0.2.8 ; python_version >= "3.11" and python_version < "4.0"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.3 ; python_version >= "3.11" and python_version < "4.0"
-openai==1.6.1 ; python_version >= "3.11" and python_version < "4.0"
+nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-nccl-cu12==2.18.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+openai==1.7.2 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
-pdf2image==1.16.3 ; python_version >= "3.11" and python_version < "4.0"
+pdf2image==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.11" and python_version < "4.0"
 peewee==3.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
 playwright==1.40.0 ; python_version >= "3.11" and python_version < "4.0"
+prompt-toolkit==3.0.43 ; python_version >= "3.11" and python_version < "4.0"
+psutil==5.9.7 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.14.6 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.5.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -102,7 +115,7 @@ six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 sortedcontainers==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.24 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.25 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.32.0.post1 ; python_version >= "3.11" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -111,20 +124,22 @@ tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "4.0"
 tinysegmenter==0.3 ; python_version >= "3.11" and python_version < "4.0"
 tldextract==5.1.1 ; python_version >= "3.11" and python_version < "4.0"
 tokenizers==0.15.0 ; python_version >= "3.11" and python_version < "4.0"
-torch==2.1.2+cpu ; python_version >= "3.11" and python_version < "4.0"
+torch==2.1.2 ; python_version >= "3.11" and python_version < "4.0"
 torchvision==0.16.2 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.1 ; python_version >= "3.11" and python_version < "4.0"
 transformers==4.36.2 ; python_version >= "3.11" and python_version < "4.0"
 trio-websocket==0.11.1 ; python_version >= "3.11" and python_version < "4.0"
-trio==0.23.2 ; python_version >= "3.11" and python_version < "4.0"
+trio==0.24.0 ; python_version >= "3.11" and python_version < "4.0"
+triton==2.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2023.4 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 urllib3[socks]==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn==0.25.0 ; python_version >= "3.11" and python_version < "4.0"
+wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 wheel==0.42.0 ; python_version >= "3.11" and python_version < "4.0"
 wsproto==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
 yarl==1.9.4 ; python_version >= "3.11" and python_version < "4.0"
-yfinance==0.2.33 ; python_version >= "3.11" and python_version < "4.0"
+yfinance==0.2.35 ; python_version >= "3.11" and python_version < "4.0"
