--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ appdirs==1.4.4 ; python_version >= "3.11" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
-beautifulsoup4==4.12.2 ; python_version >= "3.11" and python_version < "4.0"
+beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -31,11 +31,11 @@ frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "4.0"
 fsspec==2023.12.2 ; python_version >= "3.11" and python_version < "4.0"
 google-search-results==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
 googlesearch-python==1.2.3 ; python_version >= "3.11" and python_version < "4.0"
-greenlet==3.0.1 ; python_version >= "3.11" and python_version < "4.0"
+greenlet==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
-httpx==0.26.0 ; python_version >= "3.11" and python_version < "4.0"
+httpx==0.25.2 ; python_version >= "3.11" and python_version < "4.0"
 huggingface-hub==0.20.2 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 jieba3k==0.35.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -44,21 +44,22 @@ joblib==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.11" and python_version < "4.0"
 jsonpickle==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpointer==2.4 ; python_version >= "3.11" and python_version < "4.0"
-langchain-community==0.0.12 ; python_version >= "3.11" and python_version < "4.0"
-langchain-core==0.1.10 ; python_version >= "3.11" and python_version < "4.0"
+langchain-community==0.0.13 ; python_version >= "3.11" and python_version < "4.0"
+langchain-core==0.1.13 ; python_version >= "3.11" and python_version < "4.0"
 langchain==0.0.353 ; python_version >= "3.11" and python_version < "4.0"
-langsmith==0.0.80 ; python_version >= "3.11" and python_version < "4.0"
+langsmith==0.0.83 ; python_version >= "3.11" and python_version < "4.0"
 lxml==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdownify==0.11.6 ; python_version >= "3.11" and python_version < "4.0"
-markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
+markupsafe==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
 marshmallow==3.20.2 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
+mistralai==0.0.11 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 multidict==6.0.4 ; python_version >= "3.11" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.11" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
-nest-asyncio==1.5.8 ; python_version >= "3.11" and python_version < "4.0"
+nest-asyncio==1.5.9 ; python_version >= "3.11" and python_version < "4.0"
 networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
 newspaper3k==0.2.8 ; python_version >= "3.11" and python_version < "4.0"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -75,17 +76,18 @@ nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machi
 nvidia-nccl-cu12==2.18.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-openai==1.7.2 ; python_version >= "3.11" and python_version < "4.0"
+openai==1.8.0 ; python_version >= "3.11" and python_version < "4.0"
+orjson==3.9.12 ; python_version >= "3.11" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
-pandas==2.1.4 ; python_version >= "3.11" and python_version < "4.0"
+pandas==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.11" and python_version < "4.0"
 peewee==3.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
-playwright==1.40.0 ; python_version >= "3.11" and python_version < "4.0"
+playwright==1.41.0 ; python_version >= "3.11" and python_version < "4.0"
 prompt-toolkit==3.0.43 ; python_version >= "3.11" and python_version < "4.0"
-psutil==5.9.7 ; python_version >= "3.11" and python_version < "4.0"
+psutil==5.9.8 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.14.6 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.5.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -104,8 +106,8 @@ requests-file==1.5.1 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.7.0 ; python_version >= "3.11" and python_version < "4.0"
 safetensors==0.4.1 ; python_version >= "3.11" and python_version < "4.0"
-scikit-learn==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
-scipy==1.11.4 ; python_version >= "3.11" and python_version < "4.0"
+scikit-learn==1.4.0 ; python_version >= "3.11" and python_version < "4.0"
+scipy==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
 sec-api==1.0.17 ; python_version >= "3.11" and python_version < "4.0"
 selenium==4.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sentence-transformers==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
