--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmvm"
-version = "0.1.0"
+version = "0.1.5"
 description = "Command Line LLM with client side tools support."
 authors = ["Bilbo Baggins <contact@9600.dev>"]
 readme = "README.md"
@@ -49,6 +49,7 @@ googlesearch-python = "^1.2.3"
 pandas = "^2.2.0"
 lxml = "^5.1.0"
 yfinance = "^0.2.36"
+sentence-transformers = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core"]
