--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
-name = "llmvm"
+name = "llmvm-cli"
 version = "0.1.5"
-description = "Command Line LLM with client side tools support."
-authors = ["Bilbo Baggins <contact@9600.dev>"]
+description = "Command Line LLM with client-side tools support."
+authors = ["9600 devs <contact@9600.dev>"]
 readme = "README.md"
-include = ["llmvm/client/awesome_prompts.csv", "llmvm/server/prompts/**/*", "config.yaml"]
+packages = [ {include = "llmvm"} ]
+include = ["llmvm/client/awesome_prompts.csv", "llmvm/server/prompts/**/*", "llmvm/config.yaml"]
+homepage = "https://github.com/9600dev/llmvm"
+repository = "https://github.com/9600dev/llmvm"
 
 [tool.poetry.dependencies]
 python = "^3.11"
