--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ pandas = "^2.2.0"
 lxml = "^5.1.0"
 yfinance = "^0.2.36"
 sentence-transformers = "^2.3.1"
+faiss-cpu = "^1.7.4"
 
 [build-system]
 requires = ["poetry-core"]
