--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.8 ; python_version >= "3.11" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 docstring-parser==0.15 ; python_version >= "3.11" and python_version < "4.0"
+faiss-cpu==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.109.2 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.13.1 ; python_version >= "3.11" and python_version < "4.0"
 frozendict==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
