--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ aiofiles==23.2.1 ; python_version >= "3.11" and python_version < "4.0"
 aiohttp==3.9.3 ; python_version >= "3.11" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
-anthropic==0.15.0 ; python_version >= "3.11" and python_version < "4.0"
-anyio==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
+anthropic==0.15.1 ; python_version >= "3.11" and python_version < "4.0"
+anyio==4.3.0 ; python_version >= "3.11" and python_version < "4.0"
 appdirs==1.4.4 ; python_version >= "3.11" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.11" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -17,7 +17,7 @@ charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-cryptography==42.0.2 ; python_version >= "3.11" and python_version < "4.0"
+cryptography==42.0.3 ; python_version >= "3.11" and python_version < "4.0"
 dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.8 ; python_version >= "3.11" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -27,11 +27,11 @@ fastapi==0.109.2 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.13.1 ; python_version >= "3.11" and python_version < "4.0"
 frozendict==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
 frozenlist==1.4.1 ; python_version >= "3.11" and python_version < "4.0"
-fsspec==2023.12.2 ; python_version >= "3.11" and python_version < "4.0"
+fsspec==2024.2.0 ; python_version >= "3.11" and python_version < "4.0"
 google-ai-generativelanguage==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
-google-api-core==2.16.2 ; python_version >= "3.11" and python_version < "4.0"
-google-api-core[grpc]==2.16.2 ; python_version >= "3.11" and python_version < "4.0"
-google-auth==2.27.0 ; python_version >= "3.11" and python_version < "4.0"
+google-api-core==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
+google-api-core[grpc]==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
+google-auth==2.28.0 ; python_version >= "3.11" and python_version < "4.0"
 google-generativeai==0.3.2 ; python_version >= "3.11" and python_version < "4.0"
 googleapis-common-protos==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
 googlesearch-python==1.2.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -40,7 +40,7 @@ grpcio-status==1.60.1 ; python_version >= "3.11" and python_version < "4.0"
 grpcio==1.60.1 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
-httpcore==1.0.2 ; python_version >= "3.11" and python_version < "4.0"
+httpcore==1.0.3 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.11" and python_version < "4.0"
 huggingface-hub==0.20.3 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
@@ -50,9 +50,9 @@ jsonpatch==1.33 ; python_version >= "3.11" and python_version < "4.0"
 jsonpickle==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpointer==2.4 ; python_version >= "3.11" and python_version < "4.0"
 langchain-community==0.0.17 ; python_version >= "3.11" and python_version < "4.0"
-langchain-core==0.1.18 ; python_version >= "3.11" and python_version < "4.0"
+langchain-core==0.1.19 ; python_version >= "3.11" and python_version < "4.0"
 langchain==0.1.5 ; python_version >= "3.11" and python_version < "4.0"
-langsmith==0.0.86 ; python_version >= "3.11" and python_version < "4.0"
+langsmith==0.0.92 ; python_version >= "3.11" and python_version < "4.0"
 lxml==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdownify==0.11.6 ; python_version >= "3.11" and python_version < "4.0"
@@ -67,7 +67,7 @@ mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "4.0"
 networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "4.0"
-numpy==1.26.3 ; python_version >= "3.11" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
@@ -80,29 +80,29 @@ nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machi
 nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-openai==1.11.0 ; python_version >= "3.11" and python_version < "4.0"
-orjson==3.9.12 ; python_version >= "3.11" and python_version < "4.0"
+openai==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
+orjson==3.9.14 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer==20191125 ; python_version >= "3.11" and python_version < "4.0"
-peewee==3.17.0 ; python_version >= "3.11" and python_version < "4.0"
+peewee==3.17.1 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
-playwright==1.41.1 ; python_version >= "3.11" and python_version < "4.0"
+playwright==1.41.2 ; python_version >= "3.11" and python_version < "4.0"
 prompt-toolkit==3.0.43 ; python_version >= "3.11" and python_version < "4.0"
 proto-plus==1.23.0 ; python_version >= "3.11" and python_version < "4.0"
-protobuf==4.25.2 ; python_version >= "3.11" and python_version < "4.0"
+protobuf==4.25.3 ; python_version >= "3.11" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 pycryptodome==3.20.0 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-core==2.16.1 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==2.6.0 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.16.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
 pyee==11.0.1 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "4.0"
-pypdf==4.0.1 ; python_version >= "3.11" and python_version < "4.0"
+pypdf==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
 pyperclip==1.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytesseract==0.3.10 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -114,31 +114,31 @@ requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.7.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 safetensors==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
-scikit-learn==1.4.0 ; python_version >= "3.11" and python_version < "4.0"
+scikit-learn==1.4.1.post1 ; python_version >= "3.11" and python_version < "4.0"
 scipy==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
 sec-api==1.0.17 ; python_version >= "3.11" and python_version < "4.0"
 sentence-transformers==2.3.1 ; python_version >= "3.11" and python_version < "4.0"
-sentencepiece==0.1.99 ; python_version >= "3.11" and python_version < "4.0"
+sentencepiece==0.2.0 ; python_version >= "3.11" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.25 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.27 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.36.3 ; python_version >= "3.11" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
-threadpoolctl==3.2.0 ; python_version >= "3.11" and python_version < "4.0"
+threadpoolctl==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "4.0"
-tokenizers==0.15.1 ; python_version >= "3.11" and python_version < "4.0"
+tokenizers==0.15.2 ; python_version >= "3.11" and python_version < "4.0"
 torch==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
-tqdm==4.66.1 ; python_version >= "3.11" and python_version < "4.0"
+tqdm==4.66.2 ; python_version >= "3.11" and python_version < "4.0"
 transformers==4.37.2 ; python_version >= "3.11" and python_version < "4.0"
 triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
-tzdata==2023.4 ; python_version >= "3.11" and python_version < "4.0"
-urllib3==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
-uvicorn==0.27.0.post1 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
+uvicorn==0.27.1 ; python_version >= "3.11" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 wheel==0.42.0 ; python_version >= "3.11" and python_version < "4.0"
