--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -3,7 +3,8 @@
 server_host: '0.0.0.0'
 server_port: 8011
 profiling: false
-profiling_file: '~/.local/share/llmvm/trace.log'
+profiling_file: '~/.local/share/llmvm/profiling_trace.log'
+executor_trace: '~/.local/share/llmvm/executor_trace.log'
 firefox_profile: '~/.mozilla/firefox/cp6sgb0s.selenium'
 firefox_download_directory: '~/.local/share/llmvm/download'
 firefox_cookies: '~/.local/share/llmvm/cookies.txt'
