--- a/requirements.txt
+++ b/requirements.txt
@@ -31,18 +31,18 @@ fsspec==2024.2.0 ; python_version >= "3.11" and python_version < "4.0"
 google-ai-generativelanguage==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
 google-api-core==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
 google-api-core[grpc]==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
-google-auth==2.28.1 ; python_version >= "3.11" and python_version < "4.0"
+google-auth==2.28.2 ; python_version >= "3.11" and python_version < "4.0"
 google-generativeai==0.3.2 ; python_version >= "3.11" and python_version < "4.0"
 googleapis-common-protos==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
 googlesearch-python==1.2.3 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
-grpcio-status==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
-grpcio==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
+grpcio-status==1.62.1 ; python_version >= "3.11" and python_version < "4.0"
+grpcio==1.62.1 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.4 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.11" and python_version < "4.0"
-huggingface-hub==0.21.3 ; python_version >= "3.11" and python_version < "4.0"
+huggingface-hub==0.21.4 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
 joblib==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -57,7 +57,7 @@ lxml==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdownify==0.11.6 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
-marshmallow==3.21.0 ; python_version >= "3.11" and python_version < "4.0"
+marshmallow==3.21.1 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mistralai==0.0.12 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -77,7 +77,7 @@ nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine
 nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
+nvidia-nvjitlink-cu12==12.4.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 openai==1.13.3 ; python_version >= "3.11" and python_version < "4.0"
 orjson==3.9.15 ; python_version >= "3.11" and python_version < "4.0"
@@ -85,9 +85,10 @@ packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.11" and python_version < "4.0"
+pdfplumber==0.11.0 ; python_version >= "3.11" and python_version < "4.0"
 peewee==3.17.1 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
-playwright==1.41.2 ; python_version >= "3.11" and python_version < "4.0"
+playwright==1.42.0 ; python_version >= "3.11" and python_version < "4.0"
 prompt-toolkit==3.0.43 ; python_version >= "3.11" and python_version < "4.0"
 proto-plus==1.23.0 ; python_version >= "3.11" and python_version < "4.0"
 protobuf==4.25.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -99,10 +100,11 @@ pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.6.3 ; python_version >= "3.11" and python_version < "4.0"
 pyee==11.0.1 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "4.0"
-pypdf==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
+pypdf==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
+pypdfium2==4.28.0 ; python_version >= "3.11" and python_version < "4.0"
 pyperclip==1.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytesseract==0.3.10 ; python_version >= "3.11" and python_version < "4.0"
-python-dateutil==2.9.0 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -119,7 +121,7 @@ serpapi==0.1.5 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
-sqlalchemy==2.0.27 ; python_version >= "3.11" and python_version < "4.0"
+sqlalchemy==2.0.28 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.36.3 ; python_version >= "3.11" and python_version < "4.0"
 sympy==1.12 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
