--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -36,3 +36,6 @@ helper_functions:
   - llmvm.server.tools.edgar.EdgarHelpers.get_report
   - llmvm.server.tools.market.MarketHelpers.get_stock_price
   - llmvm.server.tools.market.MarketHelpers.get_current_market_capitalization
+  - llmvm.server.bcl.BCL.sample_normal
+  - llmvm.server.bcl.BCL.sample_binomial
+  - llmvm.server.bcl.BCL.sample_lognormal
