lots of fixes here, added some more complex capabilities and examples

--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -39,3 +39,4 @@ helper_functions:
   - llmvm.server.bcl.BCL.sample_normal
   - llmvm.server.bcl.BCL.sample_binomial
   - llmvm.server.bcl.BCL.sample_lognormal
+  - llmvm.server.bcl.BCL.sample_list
