fixes before next version build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,50 +11,130 @@ repository = "https://github.com/9600dev/llmvm"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
-# common dependencies
-async-timeout = "^4.0.3"
-click = "^8.1.7"
-jsonpickle = "^3.0.2"
-nest-asyncio = "^1.6.0"
-rich = "^13.7.0"
-openai = "^1.13.3"
-anthropic = "^0.16.0"
-mistralai = "^0.0.12"
-click-default-group = "^1.2.4"
-google-generativeai = "^0.3.2"
-prompt-toolkit = "^3.0.43"
-tiktoken = "^0.5.2"
-psutil = "^5.9.8"
-docstring-parser = "^0.15"
-pillow = "^10.2.0"
-pyperclip = "^1.8.2"
-uvicorn = "^0.27.0.post1"
-fastapi = "^0.109.0"
-dill = "^0.3.8"
-astunparse = "^1.6.3"
-bs4 = "^0.0.2"
-sec-api = "^1.0.17"
-markdownify = "^0.11.6"
 aiofiles = "^23.2.1"
-playwright = "^1.41.1"
-pdf2image = "^1.17.0"
-pytesseract = "^0.3.10"
-pdfminer-six = "^20231228"
-pypdf = "^4.0.2"
-serpapi = "^0.1.5"
-langchain = "^0.1.5"
-langchain-core = "^0.1.19"
-python-multipart = "^0.0.6"
-langchain-community = "^0.0.17"
-python-dateutil = "^2.8.2"
-googlesearch-python = "^1.2.3"
-pandas = "^2.2.0"
-lxml = "^5.1.0"
-yfinance = "^0.2.37"
-sentence-transformers = "^2.5.1"
+aiohttp = "^3.9.5"
+aiosignal = "^1.3.1"
+annotated-types = "^0.7.0"
+anthropic = "^0.28.0"
+anyio = "^4.4.0"
+astunparse = "^1.6.3"
+async-timeout = "^4.0.3"
+attrs = "^23.2.0"
+beautifulsoup4 = "^4.12.3"
+bs4 = "^0.0.2"
+cachetools = "^5.3.3"
+certifi = "^2024.6.2"
+cffi = "^1.16.0"
+charset-normalizer = "^3.3.2"
+click-default-group = "^1.2.4"
+click = "^8.1.7"
+colorama = "^0.4.6"
+cryptography = "^42.0.8"
+dataclasses-json = "^0.6.7"
+dill = "^0.3.8"
+distro = "^1.9.0"
+docstring-parser = "^0.16"
+exceptiongroup = "^1.2.1"
 faiss-cpu = "^1.8.0"
-pdfplumber = "^0.11.0"
+fastapi = "^0.111.0"
+filelock = "^3.14.0"
+frozendict = "^2.4.4"
+frozenlist = "^1.4.1"
+fsspec = "^2024.6.0"
+googlesearch-python = "^1.2.4"
+greenlet = "^3.0.3"
+grpcio = "^1.64.1"
+h11 = "^0.14.0"
+html5lib = "^1.1"
+httpcore = "^1.0.5"
+huggingface-hub = "^0.23.3"
+idna = "^3.7"
+jinja2 = "^3.1.4"
+joblib = "^1.4.2"
+jsonpatch = "^1.33"
+jsonpickle = "^3.2.1"
+jsonpointer = "^3.0.0"
+langchain-community = "^0.2.4"
+langchain-core = "^0.2.5"
+langchain = "^0.2.3"
+langsmith = "^0.1.77"
+lxml = "^5.2.2"
+markdown-it-py = "^3.0.0"
+markdownify = "^0.12.1"
+markupsafe = "^2.1.5"
+marshmallow = "^3.21.3"
+mdurl = "^0.1.2"
+mpmath = "^1.3.0"
+multidict = "^6.0.5"
+multitasking = "^0.0.11"
+mypy-extensions = "^1.0.0"
+nest-asyncio = "^1.6.0"
+networkx = "^3.3"
+numpy = "^1.26.4"
+openai = "^1.34.0"
+orjson = "^3.10.4"
+pandas = "^2.2.2"
+pdf2image = "^1.17.0"
+pdfminer-six = "^20231228"
+pdfplumber = "^0.11.1"
+peewee = "^3.17.5"
+pillow = "^10.3.0"
+platformdirs = "^4.2.2"
+playwright = "^1.44.0"
+prompt-toolkit = "^3.0.47"
+proto-plus = "^1.23.0"
+psutil = "^5.9.8"
+pyasn1-modules = "^0.4.0"
+pyasn1 = "^0.6.0"
+pycparser = "^2.22"
+pyee = "^11.1.0"
+pygments = "^2.18.0"
+pypdf = "^4.2.0"
+pypdfium2 = "^4.30.0"
+pyperclip = "^1.8.2"
+pytesseract = "^0.3.10"
+python-dateutil = "^2.9.0.post0"
+python-multipart = "^0.0.9"
+pytz = "^2024.1"
+pyyaml = "^6.0.1"
+regex = "^2024.5.15"
+requests = "^2.32.3"
+rich = "^13.7.1"
+rsa = "^4.9"
+safetensors = "^0.4.3"
+scikit-learn = "^1.5.0"
+scipy = "^1.13.1"
+sec-api = "^1.0.18"
+sentence-transformers = "^3.0.1"
+serpapi = "^0.1.5"
+six = "^1.16.0"
+sniffio = "^1.3.1"
+soupsieve = "^2.5"
+sqlalchemy = "^2.0.30"
+starlette = "^0.37.2"
+sympy = "^1.12.1"
+tenacity = "^8.3.0"
+threadpoolctl = "^3.5.0"
+tiktoken = "^0.7.0"
+tokenizers = "^0.19.1"
+torch = "^2.3.1"
+tqdm = "^4.66.4"
+transformers = "^4.41.2"
+typing-extensions = "^4.12.2"
+typing-inspect = "^0.9.0"
+tzdata = "^2024.1"
+urllib3 = "^2.2.1"
+uvicorn = "^0.30.1"
+wcwidth = "^0.2.13"
+webencodings = "^0.5.1"
+wheel = "^0.43.0"
+yarl = "^1.9.4"
+yfinance = "^0.2.40"
+pydantic = "^2.7.4"
+google-generativeai = "^0.6.0"
+httpx = "0.25.2"
+mistralai = "^0.4.0"
+langchain-huggingface = "^0.0.3"
 
 [build-system]
 requires = ["poetry-core"]
