--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
 aiohttp==3.9.5 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-anthropic==0.16.0 ; python_version >= "3.10" and python_version < "4.0"
+anthropic==0.28.0 ; python_version >= "3.10" and python_version < "4.0"
 anyio==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
@@ -11,56 +11,66 @@ beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.3.3 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.6.2 ; python_version >= "3.10" and python_version < "4.0"
-cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==42.0.8 ; python_version >= "3.10" and python_version < "4.0"
 dataclasses-json==0.6.7 ; python_version >= "3.10" and python_version < "4.0"
 dill==0.3.8 ; python_version >= "3.10" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-docstring-parser==0.15 ; python_version >= "3.10" and python_version < "4.0"
-exceptiongroup==1.2.1 ; python_version >= "3.10" and python_version < "3.11"
+dnspython==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
+docstring-parser==0.16 ; python_version >= "3.10" and python_version < "4.0"
+email-validator==2.1.1 ; python_version >= "3.10" and python_version < "4.0"
+exceptiongroup==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
 faiss-cpu==1.8.0 ; python_version >= "3.10" and python_version < "4.0"
-fastapi==0.109.2 ; python_version >= "3.10" and python_version < "4.0"
+fastapi-cli==0.0.4 ; python_version >= "3.10" and python_version < "4.0"
+fastapi==0.111.0 ; python_version >= "3.10" and python_version < "4.0"
 filelock==3.14.0 ; python_version >= "3.10" and python_version < "4.0"
 frozendict==2.4.4 ; python_version >= "3.10" and python_version < "4.0"
 frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "4.0"
 fsspec==2024.6.0 ; python_version >= "3.10" and python_version < "4.0"
-google-ai-generativelanguage==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+google-ai-generativelanguage==0.6.4 ; python_version >= "3.10" and python_version < "4.0"
 google-api-core==2.19.0 ; python_version >= "3.10" and python_version < "4.0"
 google-api-core[grpc]==2.19.0 ; python_version >= "3.10" and python_version < "4.0"
+google-api-python-client==2.133.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth==2.30.0 ; python_version >= "3.10" and python_version < "4.0"
-google-generativeai==0.3.2 ; python_version >= "3.10" and python_version < "4.0"
+google-generativeai==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 googleapis-common-protos==1.63.1 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio-status==1.62.2 ; python_version >= "3.10" and python_version < "4.0"
+grpcio-status==1.62.2 ; python_version < "4.0" and python_version >= "3.10"
 grpcio==1.64.1 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
+httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
+httptools==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.10" and python_version < "4.0"
 huggingface-hub==0.23.3 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 intel-openmp==2021.4.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
+jiter==0.4.2 ; python_version >= "3.10" and python_version < "4.0"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
 jsonpickle==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-langchain-community==0.0.17 ; python_version >= "3.10" and python_version < "4.0"
-langchain-core==0.1.19 ; python_version >= "3.10" and python_version < "4.0"
-langchain==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-langsmith==0.0.92 ; python_version >= "3.10" and python_version < "4.0"
+langchain-community==0.2.4 ; python_version >= "3.10" and python_version < "4.0"
+langchain-core==0.2.5 ; python_version >= "3.10" and python_version < "4.0"
+langchain-huggingface==0.0.3 ; python_version >= "3.10" and python_version < "4.0"
+langchain-text-splitters==0.2.1 ; python_version >= "3.10" and python_version < "4.0"
+langchain==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
+langsmith==0.1.77 ; python_version >= "3.10" and python_version < "4.0"
 lxml==5.2.2 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-markdownify==0.11.6 ; python_version >= "3.10" and python_version < "4.0"
+markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
 marshmallow==3.21.3 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
-mistralai==0.0.12 ; python_version >= "3.10" and python_version < "4.0"
+mistralai==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
 mkl==2021.4.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.0.5 ; python_version >= "3.10" and python_version < "4.0"
@@ -98,17 +108,19 @@ protobuf==4.25.3 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.18.4 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.7.4 ; python_version >= "3.10" and python_version < "4.0"
 pyee==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pypdfium2==4.30.0 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytesseract==0.3.10 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.10" and python_version < "4.0"
 regex==2024.5.15 ; python_version >= "3.10" and python_version < "4.0"
@@ -119,30 +131,38 @@ safetensors==0.4.3 ; python_version >= "3.10" and python_version < "4.0"
 scikit-learn==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
 scipy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 sec-api==1.0.18 ; python_version >= "3.10" and python_version < "4.0"
-sentence-transformers==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
+sentence-transformers==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
+shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.30 ; python_version >= "3.10" and python_version < "4.0"
-starlette==0.36.3 ; python_version >= "3.10" and python_version < "4.0"
+starlette==0.37.2 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.12.1 ; python_version >= "3.10" and python_version < "4.0"
 tbb==2021.12.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 tenacity==8.3.0 ; python_version >= "3.10" and python_version < "4.0"
 threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
-tiktoken==0.5.2 ; python_version >= "3.10" and python_version < "4.0"
+tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
 torch==2.3.1 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.66.4 ; python_version >= "3.10" and python_version < "4.0"
 transformers==4.41.2 ; python_version >= "3.10" and python_version < "4.0"
 triton==2.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.12" and python_version >= "3.10"
+typer==0.12.3 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+ujson==5.10.0 ; python_version >= "3.10" and python_version < "4.0"
+uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
-uvicorn==0.27.1 ; python_version >= "3.10" and python_version < "4.0"
+uvicorn==0.30.1 ; python_version >= "3.10" and python_version < "4.0"
+uvicorn[standard]==0.30.1 ; python_version >= "3.10" and python_version < "4.0"
+uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
+watchfiles==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
+websockets==12.0 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
 yarl==1.9.4 ; python_version >= "3.10" and python_version < "4.0"
 yfinance==0.2.40 ; python_version >= "3.10" and python_version < "4.0"
