--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ pydantic = "^2.7.4"
 google-generativeai = "^0.6.0"
 httpx = "0.25.2"
 langchain-huggingface = "^0.0.3"
+matplotlib = "^3.9.0"
 
 [build-system]
 requires = ["poetry-core"]
