--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
-aiohappyeyeballs==2.4.0 ; python_version >= "3.10" and python_version < "4.0"
-aiohttp==3.10.5 ; python_version >= "3.10" and python_version < "4.0"
+aiohappyeyeballs==2.4.3 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.11.3 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 anthropic==0.34.2 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.6.2.post1 ; python_version >= "3.10" and python_version < "4.0"
 astunparse==1.6.3 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -13,70 +13,61 @@ bs4==0.0.2 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.5.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.4.0 ; python_version >= "3.10" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
-contourpy==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+contourpy==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 cryptography==42.0.8 ; python_version >= "3.10" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 dataclasses-json==0.6.7 ; python_version >= "3.10" and python_version < "4.0"
 dateparser==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
-dill==0.3.8 ; python_version >= "3.10" and python_version < "4.0"
+dill==0.3.9 ; python_version >= "3.10" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-dnspython==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
+dnspython==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
 docstring-parser==0.16 ; python_version >= "3.10" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "4.0"
-faiss-cpu==1.8.0.post1 ; python_version >= "3.10" and python_version < "4.0"
+faiss-cpu==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
 fastapi-cli==0.0.5 ; python_version >= "3.10" and python_version < "4.0"
 fastapi==0.111.1 ; python_version >= "3.10" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.10" and python_version < "4.0"
-fonttools==4.53.1 ; python_version >= "3.10" and python_version < "4.0"
-frozendict==2.4.4 ; python_version >= "3.10" and python_version < "4.0"
-frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "4.0"
-fsspec==2024.9.0 ; python_version >= "3.10" and python_version < "4.0"
-google-ai-generativelanguage==0.6.4 ; python_version >= "3.10" and python_version < "4.0"
-google-api-core==2.19.2 ; python_version >= "3.10" and python_version < "4.0"
-google-api-core[grpc]==2.19.2 ; python_version >= "3.10" and python_version < "4.0"
-google-api-python-client==2.146.0 ; python_version >= "3.10" and python_version < "4.0"
-google-auth-httplib2==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.55.0 ; python_version >= "3.10" and python_version < "4.0"
+frozendict==2.4.6 ; python_version >= "3.10" and python_version < "4.0"
+frozenlist==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+fsspec==2024.10.0 ; python_version >= "3.10" and python_version < "4.0"
 google-auth-oauthlib==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
-google-auth==2.34.0 ; python_version >= "3.10" and python_version < "4.0"
-google-generativeai==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
-googleapis-common-protos==1.65.0 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.36.0 ; python_version >= "3.10" and python_version < "4.0"
 googlesearch-python==1.2.5 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio-status==1.62.3 ; python_version >= "3.10" and python_version < "4.0"
-grpcio==1.66.1 ; python_version >= "3.10" and python_version < "4.0"
+grpcio==1.68.0 ; python_version >= "3.10" and python_version < "4.0"
 gspread-dataframe==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
-gspread==6.1.3 ; python_version >= "3.10" and python_version < "4.0"
+gspread==6.1.4 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.10" and python_version < "4.0"
-httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
-httplib2==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
-httptools==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.7 ; python_version >= "3.10" and python_version < "4.0"
+httptools==0.6.4 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.10" and python_version < "4.0"
 huggingface-hub==0.23.5 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
-jiter==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+jiter==0.7.1 ; python_version >= "3.10" and python_version < "4.0"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
-jsonpickle==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
+jsonpickle==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 kiwisolver==1.4.7 ; python_version >= "3.10" and python_version < "4.0"
-langchain-community==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
-langchain-core==0.2.40 ; python_version >= "3.10" and python_version < "4.0"
+langchain-community==0.2.19 ; python_version >= "3.10" and python_version < "4.0"
+langchain-core==0.2.43 ; python_version >= "3.10" and python_version < "4.0"
 langchain-huggingface==0.0.3 ; python_version >= "3.10" and python_version < "4.0"
 langchain-text-splitters==0.2.4 ; python_version >= "3.10" and python_version < "4.0"
-langchain==0.2.16 ; python_version >= "3.10" and python_version < "4.0"
-langsmith==0.1.121 ; python_version >= "3.10" and python_version < "4.0"
+langchain==0.2.17 ; python_version >= "3.10" and python_version < "4.0"
+langsmith==0.1.143 ; python_version >= "3.10" and python_version < "4.0"
 lxml==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 markdownify==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
-marshmallow==3.22.0 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow==3.23.1 ; python_version >= "3.10" and python_version < "4.0"
 matplotlib==3.9.2 ; python_version >= "3.10" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -84,35 +75,36 @@ multidict==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
-networkx==3.3 ; python_version >= "3.10" and python_version < "4.0"
+networkx==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
-nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cublas-cu12==12.4.5.8 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-cupti-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-runtime-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-cudnn-cu12==9.1.0.70 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-nccl-cu12==2.20.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-nvjitlink-cu12==12.6.68 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
-nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cufft-cu12==11.2.1.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-curand-cu12==10.3.5.147 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusolver-cu12==11.6.1.9 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusparse-cu12==12.3.1.170 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
-openai==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
-orjson==3.10.7 ; python_version >= "3.10" and python_version < "4.0"
-packaging==24.1 ; python_version >= "3.10" and python_version < "4.0"
-pandas==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
+openai==1.54.4 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.11 ; python_version >= "3.10" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.10" and python_version < "4.0"
 pdfplumber==0.11.4 ; python_version >= "3.10" and python_version < "4.0"
-peewee==3.17.6 ; python_version >= "3.10" and python_version < "4.0"
+peewee==3.17.8 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
 playwright==1.46.0 ; python_version >= "3.10" and python_version < "4.0"
-prompt-toolkit==3.0.47 ; python_version >= "3.10" and python_version < "4.0"
-proto-plus==1.24.0 ; python_version >= "3.10" and python_version < "4.0"
-protobuf==4.25.4 ; python_version >= "3.10" and python_version < "4.0"
+prompt-toolkit==3.0.48 ; python_version >= "3.10" and python_version < "4.0"
+propcache==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+proto-plus==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==5.28.3 ; python_version >= "3.10" and python_version < "4.0"
 psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -121,7 +113,7 @@ pydantic-core==2.23.4 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.10" and python_version < "4.0"
 pyee==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
-pyparsing==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pypdf==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 pypdfium2==4.30.0 ; python_version >= "3.10" and python_version < "4.0"
 pyperclip==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -131,47 +123,47 @@ python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
-regex==2024.9.11 ; python_version >= "3.10" and python_version < "4.0"
+regex==2024.11.6 ; python_version >= "3.10" and python_version < "4.0"
 requests-oauthlib==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
-rich==13.8.1 ; python_version >= "3.10" and python_version < "4.0"
+rich==13.9.4 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 safetensors==0.4.5 ; python_version >= "3.10" and python_version < "4.0"
 scikit-learn==1.5.2 ; python_version >= "3.10" and python_version < "4.0"
 scipy==1.14.1 ; python_version >= "3.10" and python_version < "4.0"
-sec-api==1.0.20 ; python_version >= "3.10" and python_version < "4.0"
-sentence-transformers==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
+sec-api==1.0.25 ; python_version >= "3.10" and python_version < "4.0"
+sentence-transformers==3.3.1 ; python_version >= "3.10" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.1.0 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==75.5.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.35 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.36 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.37.2 ; python_version >= "3.10" and python_version < "4.0"
-sympy==1.13.2 ; python_version >= "3.10" and python_version < "4.0"
+sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
 threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
-torch==2.4.1 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.66.5 ; python_version >= "3.10" and python_version < "4.0"
+torch==2.5.1 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.67.0 ; python_version >= "3.10" and python_version < "4.0"
 transformers==4.44.2 ; python_version >= "3.10" and python_version < "4.0"
-triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
-typer==0.12.5 ; python_version >= "3.10" and python_version < "4.0"
+triton==3.1.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
+typer==0.13.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
 tzlocal==5.2 ; python_version >= "3.10" and python_version < "4.0"
-uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn[standard]==0.30.6 ; python_version >= "3.10" and python_version < "4.0"
-uvloop==0.20.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
+uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
 watchfiles==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
-websockets==13.0.1 ; python_version >= "3.10" and python_version < "4.0"
+websockets==14.1 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
-yarl==1.11.1 ; python_version >= "3.10" and python_version < "4.0"
-yfinance==0.2.43 ; python_version >= "3.10" and python_version < "4.0"
+yarl==1.17.2 ; python_version >= "3.10" and python_version < "4.0"
+yfinance==0.2.49 ; python_version >= "3.10" and python_version < "4.0"
